sw/qa/extras/layout/layout4.cxx
@@ -1610,6 +1610,13 @@ CPPUNIT_TEST_FIXTURE(SwLayoutWriter4, TestTdf155229RowAtLeast)
     CPPUNIT_ASSERT_EQUAL(sal_Int32(15494), nTableHeight);
 }
 
+CPPUNIT_TEST_FIXTURE(SwLayoutWriter4, TestTdf164907_rowHeightAtLeast)
+{
+    createSwDoc("tdf164907_rowHeightAtLeast.docx");
+
+    CPPUNIT_ASSERT_EQUAL(1, getPages());
+}
+
 CPPUNIT_TEST_FIXTURE(SwLayoutWriter4, TestTdf157829LTR)
 {
     // Verify that line breaking inside a bidi portion triggers underflow to previous bidi portions
